// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeColumnが0に戻る 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 9,
+     \\"activeColumn\\": 0,
      \\"mode\\": \\"proposed\\",
    },
    \\"developerMode\\": true,
    \\"estimator\\": Object {
      \\"id\\": null,"
`;

exports[`activeColumnが1増える 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"configWindow\\": Object {
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
-     \\"activeColumn\\": 0,
+     \\"activeColumn\\": 1,
      \\"mode\\": \\"proposed\\",
    },
    \\"developerMode\\": true,
    \\"estimator\\": Object {
      \\"id\\": null,"
`;

exports[`modeが設定出来る normalの場合 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,11 @@
      \\"isActive\\": false,
      \\"scanSpeed\\": 0,
    },
    \\"cursol\\": Object {
      \\"activeColumn\\": 0,
-     \\"mode\\": \\"proposed\\",
+     \\"mode\\": \\"normal\\",
    },
    \\"developerMode\\": true,
    \\"estimator\\": Object {
      \\"id\\": null,
      \\"result\\": \\"\\","
`;

exports[`modeが設定出来る proposedの場合 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
